// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Contextual Matches the snapshot when disabled 1`] = `
.c4 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

.c2 {
  color: #000000;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.0166em;
  -moz-letter-spacing: 0.0166em;
  -ms-letter-spacing: 0.0166em;
  letter-spacing: 0.0166em;
  line-height: 1.1666;
  margin: 0;
}

input + .c2 {
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 label {
  bottom: 0.5rem;
  color: #57666E;
  display: inline-block;
  height: 1rem;
  left: 0.5rem;
  margin: auto;
  position: absolute;
  top: 0.5rem;
  width: 1rem;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
}

.c3 {
  color: #9CA7B4;
  height: 1rem;
  width: 1rem;
}

.c7 {
  color: #000000;
  height: 0.75rem;
  width: 0.75rem;
}

.c5 {
  background: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: 0.25rem;
  box-shadow: none;
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: calc(1rem - 2px);
  margin: 0;
  outline: none;
  padding: 0.5rem;
  border-radius: undefined;
  line-height: 1;
  padding: 0.5rem 1.75rem 0.5rem 2rem;
}

.c5::-webkit-input-placeholder {
  color: #57666E;
}

.c5::-moz-placeholder {
  color: #57666E;
}

.c5:-ms-input-placeholder {
  color: #57666E;
}

.c5::placeholder {
  color: #57666E;
}

.c5:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c5:disabled,
.c5:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c5:disabled,
.c5:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c5:disabled,
.c5:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c5:disabled,
.c5:disabled::placeholder {
  color: #9CA7B4;
}

.c5:focus {
  border-color: #0080A5;
}

label + .c5 {
  display: block;
  margin-top: 0.5rem;
  width: 100%;
}

label + .c5 {
  margin-top: 0;
}

.c5::-webkit-search-decoration,
.c5::-webkit-search-cancel-button,
.c5::-webkit-search-results-button,
.c5::-webkit-search-results-decoration {
  display: none;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: 0;
  bottom: 0.5rem;
  cursor: pointer;
  display: none;
  height: 0.75rem;
  margin: auto;
  padding: 0;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
  width: 0.75rem;
}

input:valid + .c6 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      <svg
        className="c3"
        disabled={true}
      />
      <span
        aria-hidden="false"
        className="c4"
      >
        Search
      </span>
    </label>
    <input
      autoComplete="on"
      className="c5"
      disabled={true}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="search"
      value=""
    />
    <button
      className="c6"
      data-testid="resetButton"
      onClick={[Function]}
    >
      <svg
        className="c7"
      />
      <span
        aria-hidden="false"
        className="c4"
      >
        Reset
      </span>
    </button>
  </div>
</div>
`;

exports[`Search Contextual Matches the snapshot when enabled 1`] = `
.c4 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

.c2 {
  color: #000000;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.0166em;
  -moz-letter-spacing: 0.0166em;
  -ms-letter-spacing: 0.0166em;
  letter-spacing: 0.0166em;
  line-height: 1.1666;
  margin: 0;
}

input + .c2 {
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 label {
  bottom: 0.5rem;
  color: #57666E;
  display: inline-block;
  height: 1rem;
  left: 0.5rem;
  margin: auto;
  position: absolute;
  top: 0.5rem;
  width: 1rem;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
}

.c3 {
  color: #57666E;
  height: 1rem;
  width: 1rem;
}

.c7 {
  color: #000000;
  height: 0.75rem;
  width: 0.75rem;
}

.c5 {
  background: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: 0.25rem;
  box-shadow: none;
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: calc(1rem - 2px);
  margin: 0;
  outline: none;
  padding: 0.5rem;
  border-radius: undefined;
  line-height: 1;
  padding: 0.5rem 1.75rem 0.5rem 2rem;
}

.c5::-webkit-input-placeholder {
  color: #57666E;
}

.c5::-moz-placeholder {
  color: #57666E;
}

.c5:-ms-input-placeholder {
  color: #57666E;
}

.c5::placeholder {
  color: #57666E;
}

.c5:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c5:disabled,
.c5:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c5:disabled,
.c5:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c5:disabled,
.c5:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c5:disabled,
.c5:disabled::placeholder {
  color: #9CA7B4;
}

.c5:focus {
  border-color: #0080A5;
}

label + .c5 {
  display: block;
  margin-top: 0.5rem;
  width: 100%;
}

label + .c5 {
  margin-top: 0;
}

.c5::-webkit-search-decoration,
.c5::-webkit-search-cancel-button,
.c5::-webkit-search-results-button,
.c5::-webkit-search-results-decoration {
  display: none;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: 0;
  bottom: 0.5rem;
  cursor: pointer;
  display: none;
  height: 0.75rem;
  margin: auto;
  padding: 0;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
  width: 0.75rem;
}

input:valid + .c6 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      <svg
        className="c3"
      />
      <span
        aria-hidden="false"
        className="c4"
      >
        Search
      </span>
    </label>
    <input
      autoComplete="on"
      className="c5"
      onChange={[Function]}
      onKeyDown={[Function]}
      type="search"
      value=""
    />
    <button
      className="c6"
      data-testid="resetButton"
      onClick={[Function]}
    >
      <svg
        className="c7"
      />
      <span
        aria-hidden="false"
        className="c4"
      >
        Reset
      </span>
    </button>
  </div>
</div>
`;
